Preparing JS coding for weather forecasting
Updated js coding to prepare for weather forecasts. Still need to connect the proper days. API working.
Corrected CSS for better look

--- a/src/styles.css
+++ b/src/styles.css
@@ -116,7 +116,7 @@ a:hover {
 
 .forecast-day {
   text-align: center;
-  margin-top: 22px;
+  margin-top: 32px;
   font-weight: 600;
   color: white;
 }
@@ -190,6 +190,7 @@ ul {
 }
 
 #weatherIcon {
-  text-align: center;
+  display: block;
+  margin: auto;
   font-size: 26px;
 }
